--- a/.bash_history/app/src/main/res/layout/activity_start_up.xml
+++ b/.bash_history/app/src/main/res/layout/activity_start_up.xml
@@ -18,7 +18,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_logo"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
 
         />
