--- a/.bash_history/app/src/main/res/layout/activity_start_up.xml
+++ b/.bash_history/app/src/main/res/layout/activity_start_up.xml
@@ -1,60 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorBlack"
+    android:background="#000000"
     tools:context="collationsoftsolution.poolit.StartUpActivity">
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:orientation="vertical"
-    android:id="@+id/parent_linear_layout">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="160dp"
+        android:id="@+id/LogoPic"
         android:src="@mipmap/ic_logo"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="10dp" />
 
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="this is testing"/>
-    <RelativeLayout
+    <EditText
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Name"
+        android:ems="10"
+        android:id="@+id/loginName"
+        android:layout_below="@+id/LogoPic"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:padding="10dp"
+        android:background="#ffffff"
+        android:layout_marginBottom="15dp" />
+
+    <EditText
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/loginPwd"
+        android:layout_below="@+id/loginName"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:hint="Password"
+        android:padding="10dp"
+        android:background="#ffffff"
+        android:layout_marginTop="15dp"/>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/child_1_relative_layout">
-        <LinearLayout
-            
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/sub_child_1_relative_layout">
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Username"
-            android:drawableEnd="@drawable/ic_person_black_24dp"
-            />
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="password"
-            android:drawableEnd="@drawable/ic_lock_black_24dp"/>
-        </LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:layout_below="@+id/sub_child_1_relative_layout"/>
+        android:text="LOGIN"
+        android:id="@+id/loginButton"
+        android:layout_below="@+id/loginPwd"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="30dp"
+        android:focusable="false"
+        android:background="#ffffff" />
 
-    </RelativeLayout>
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Forgot Password?"
+        android:id="@+id/forgot_pwd"
+        android:layout_alignBottom="@+id/loginButton"
+        android:layout_toRightOf="@+id/loginButton"
+        android:layout_toEndOf="@+id/loginButton"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        android:textColor="#eee719" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="REGISTER AS USER"
+        android:id="@+id/regUser"
+        android:layout_below="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textColor="#eee719" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="REGISTER AS MERCHANT"
+        android:id="@+id/regMerchant"
+        android:layout_below="@+id/regUser"
+        android:layout_centerHorizontal="true"
+        android:textColor="#eee719" />
+
 
 </RelativeLayout>
