--- a/.bash_history/app/src/main/res/layout/contacts_fragment.xml
+++ b/.bash_history/app/src/main/res/layout/contacts_fragment.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <TextView android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="CONTACTS WILL BE DISPLAYED HERE"
+        android:textSize="20dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal"/>
+
+</RelativeLayout>
