--- a/.bash_history/app/src/main/res/layout/activity_merchant_reg.xml
+++ b/.bash_history/app/src/main/res/layout/activity_merchant_reg.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#000000"
+    android:background="#edf46004"
     tools:context="collationsoftsolution.poolit.MerchantRegActivity">
 
     <ImageView
