--- a/.bash_history/app/src/main/res/layout/activity_start_up.xml
+++ b/.bash_history/app/src/main/res/layout/activity_start_up.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#000000"
+    android:background="#fef46004"
     tools:context="collationsoftsolution.poolit.StartUpActivity">
     <ImageView
         android:layout_width="350dp"
@@ -71,7 +71,7 @@
         android:layout_toEndOf="@+id/loginButton"
         android:layout_marginLeft="10dp"
         android:textSize="15dp"
-        android:textColor="#eee719" />
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
         android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:textColor="#eee719" />
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,7 +92,7 @@
         android:id="@+id/regMerchant"
         android:layout_below="@+id/regUser"
         android:layout_centerHorizontal="true"
-        android:textColor="#eee719" />
+        android:textColor="#000000" />
 
 
 </RelativeLayout>
