--- a/.bash_history/app/src/main/res/layout/contacts_fragment.xml
+++ b/.bash_history/app/src/main/res/layout/contacts_fragment.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="CONTACTS WILL BE DISPLAYED HERE"
-        android:textSize="20dp"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center_horizontal"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/poolit_contacts"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="CONTACTS WILL BE DISPLAYED HERE"
+            android:textSize="20dp"
+            android:layout_centerInParent="true"
+            />
+
+
+    </ScrollView>
+
+
 
 </RelativeLayout>
