--- a/.bash_history/app/src/main/res/layout/activity_start_up.xml
+++ b/.bash_history/app/src/main/res/layout/activity_start_up.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#fef46004"
+    android:background="#f5760a"
     tools:context="collationsoftsolution.poolit.StartUpActivity">
     <ImageView
         android:layout_width="350dp"
