--- a/.bash_history/app/src/main/res/layout/activity_user_register.xml
+++ b/.bash_history/app/src/main/res/layout/activity_user_register.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#000000"
+    android:background="#f5760a"
     tools:context="collationsoftsolution.poolit.UserRegisterActivity">
 
     <ImageView
