--- a/.bash_history/app/src/main/res/layout/contacts_fragment.xml
+++ b/.bash_history/app/src/main/res/layout/contacts_fragment.xml
@@ -5,16 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <ListView
-            android:id="@+id/poolit_contacts"
+            android:id="@+id/contacts_list"
+            android:layout_below="@+id/toolbar"
             android:layout_width="fill_parent"
-            android:layout_height="50dp"
+            android:layout_height="90dp"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
             android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
             android:text="CONTACTS WILL BE DISPLAYED HERE"
             android:textSize="20dp"
