--- a/.bash_history/app/src/main/res/layout/new_group_layout.xml
+++ b/.bash_history/app/src/main/res/layout/new_group_layout.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fef46004">
+    android:background="#ffffff">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -23,103 +23,40 @@
 
 
 
-    <ScrollView
-        android:id="@+id/scrollview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        >
+
 
         <LinearLayout
+            android:id="@+id/grp_top_layout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:background="#fef46004">
-
-
+            android:layout_height="370dp"
+            android:padding="16dp">
 
 
             <ImageView
-                android:background="#ffffff"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:id="@+id/new_pool_image"
+                android:layout_width="170dp"
+                android:layout_height="170dp"
+                android:id="@+id/new_group_image"
                 android:layout_marginBottom="15dp"
-                android:layout_marginTop="0dp"/>
+                android:layout_marginTop="0dp"
+                android:src="@drawable/ic_group_icon"
+                android:layout_gravity="center_horizontal"/>
 
             <EditText
-                android:background="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/new_pool_title"
                 android:layout_gravity="center_horizontal"
+                android:drawableBottom="#edf46004"
                 android:hint="Group Title"
                 android:padding="18dp"
                 android:layout_marginBottom="15dp"/>
 
-            <EditText
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/new_pool_description"
-                android:layout_gravity="center_horizontal"
-                android:hint="Group Description"
-                android:padding="18dp"
-                android:layout_marginBottom="15dp"/>
 
             <EditText
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/new_target_amount"
-                android:hint="Target Amount"
-                android:padding="18dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="15dp"/>
-
-            <EditText
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="date"
-                android:ems="10"
-                android:id="@+id/new_end_date"
-                android:padding="18dp"
-                android:hint="End Date"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="15dp" />
-
-            <EditText
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/new_parts"
-                android:hint="Split to No of Equal Parts "
-                android:padding="18dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="15dp"/>
-
-            <EditText
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/new_addmem_group"
-                android:layout_gravity="center_horizontal"
-                android:hint="Add Members from Groups"
-                android:padding="18dp"
-                android:layout_marginBottom="20dp"/>
-
-
-            <EditText
-                android:background="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/new_addmem_contacts"
@@ -130,6 +67,26 @@
 
 
         </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <ListView
+            android:id="@+id/group_list"
+            android:layout_below="@+id/toolbar"
+            android:layout_width="fill_parent"
+            android:layout_height="90dp"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="CONTACTS WILL BE DISPLAYED HERE"
+            android:textSize="20dp"
+            android:layout_centerInParent="true"
+            />
 
     </ScrollView>
 </LinearLayout>
