--- a/.bash_history/app/src/main/res/layout/shop_fragment.xml
+++ b/.bash_history/app/src/main/res/layout/shop_fragment.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="HERE GOES THE SHOPPING CONTENT"
-        android:textSize="20dp"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center_horizontal"/>
+<ScrollView
+    android:id="@+id/scrollview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+       <LinearLayout
+           android:layout_marginTop="16dp"
+           android:layout_marginLeft="16dp"
+           android:layout_marginBottom="16dp"
+           android:layout_marginRight="16dp"
+           android:id="@+id/shop_layout"
+           xmlns:android="http://schemas.android.com/apk/res/android"
+           android:orientation="vertical"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
 
-</RelativeLayout>
+           <ListView
+               android:id="@+id/shop_listview"
+               android:layout_width="match_parent"
+               android:layout_height="70dp">
+
+           </ListView>
+
+</LinearLayout>
+
+</ScrollView>
