--- a/.bash_history/app/src/main/res/menu/upload_id_menu.xml
+++ b/.bash_history/app/src/main/res/menu/upload_id_menu.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:title="@string/menu_accc_info">
+    android:title="@string/menu_new_pool">
 
-    <item android:id="@+id/create_new_group"
-        android:title="@string/acc_info_edit"
+    <item android:id="@+id/proofs_save"
+        android:title="SAVE"
         app:showAsAction="always|withText"
         />
+
+
 
 </menu>
