--- a/.bash_history/app/src/main/res/values/colors.xml
+++ b/.bash_history/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#f5760a</color>
+    <color name="colorPrimaryDark">#c86109</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#fdc2bfbf</color>
 
